[Scrollbar] Fix for devices

--- a/components/esl-utils/less/scroll.less
+++ b/components/esl-utils/less/scroll.less
@@ -2,6 +2,11 @@ html.esl-disable-scroll {
   // Simple scroll blocking
   body {
     overflow: hidden !important;
+
+    // hide-scrollbar
+    &::-webkit-scrollbar {
+      display: none; // Chrome, Safari
+    }
   }
 
   // Shows page scroll
